# filesplitter

./: CMakeLists.txt  README.md
include/: filesplitter.hpp  tool.hpp  utilities.hpp
src/: CMakeLists.txt  filesplitter.cpp  tool.cpp  utilities.cpp
